[metadata]
name = carbide-rest
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Carbide REST API Components
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    carbide_rest
